--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -19,9 +19,6 @@ After unzipping the archive you should have the following files:
 
 
 
-= Details =
+= Walkthrough =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== Gene based analysis ==
