--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -18,7 +18,9 @@ After unzipping the archive you should have the following files:
 
 = Walkthrough =
 
-== Gene based analysis ==
+== Unique gene based analysis ==
+
+First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once. This means, even when a gene has more than one candidate SNP it is only counted once ({{{--unit gene}}}). 
 <code language="bash">
 
 </code>
