--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -20,7 +20,7 @@ After unzipping the archive you should have the following files:
 
 == Unique gene based analysis ==
 
-First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once. This means, even when a gene has more than one candidate SNP it is only counted once ({{{--unit gene}}}). 
+First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once. This means, even when a gene has more than one candidate SNP it is only counted once ({{{--unit gene}}}). Further we assign a SNP to a gene if the SNP is overlapping either with an exon or an intron ({{{--gene-defintion gene}}}).
 <code language="bash">
 
 </code>
