--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -20,7 +20,7 @@ After unzipping the archive you should have the following files:
 
 == Unique gene based analysis ==
 
-First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once. This means, even when a gene has more than one candidate SNP it is only counted once ({{{--unit gene}}}). Further we assign a SNP to a gene if the SNP is overlapping either with an exon or an intron ({{{--gene-defintion gene}}}).
+First we test whether the candidate SNPs show any enrichment for any GO category when counting every gene only once. This means, even when a gene has more than one candidate SNP it is only counted once ({{{--unit gene}}}). We want every gene counted only once because we assume that there is linkage disequilibrium between our candidate SNPs and they are thus not independent. Further we assign a SNP to a gene if the SNP is overlapping either with an exon or an intron ({{{--gene-defintion gene}}}).
 <code language="bash">
 java -Xmx4g -jar /Users/robertkofler/dev/PopGenTools/gowinda/Gowinda.jar --snp-file all_snps.txt --candidate-snp-file candidate_snps.txt --go-association-file funcassociate_go_associations.txt --annotation-file annotation.gff --simulations 100000 --gene-definition gene --unit gene --threads 4 --output-file go_enrich_gene.txt --min-significance 1 
 </code>
@@ -33,3 +33,5 @@ GO:0000152      0.134   2       0.007510        1.000000        nuclear ubiquiti
 GO:0044265      0.953   4       0.012160        1.000000        cellular macromolecule catabolic process        fbgn0050421,fbgn0015509,fbgn0024732,fbgn0002791
 GO:0016023      1.142   4       0.012730        1.000000        cytoplasmic membrane-bounded vesicle    fbgn0033313,fbgn0260964,fbgn0261673,fbgn0033714
 </code>
+
+A detailed description of the output file can be found in the Manual
