--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -72,5 +72,11 @@ From the GoMiner results you need to extract the file: gominer_totest.txt.change
 
 {{{
 cat gowinda_res.txt| awk '{print $1,$4}'|sort -k1,1 > merged/tm_gowinda.txt
-cat GoMiner/gominer_totest.txt.change.gce |awk 'NF>5{print $1,10^$5}'|perl -pe 's/_[^ ]+//' |sort -k1,1> merged/tm_gominer.txt
+cat GoMiner/gominer_totest.txt.change |awk 'NF>5{print $1,10^$5}'|perl -pe 's/_[^ ]+//' |sort -k1,1> merged/tm_gominer.txt
+join -1 1 -2 1 tm_gominer.txt tm_gowinda.txt > merged_min_win.txt
 }}}
+The resulting file contains for every GO category (column 1) the p-value obtained with !GoMiner (column 2) and Gowinda (column 3)
+
+== Results == 
+These results (merged_min_win.txt) can now be analyzed in R.
+We found
