--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -21,7 +21,7 @@ The results for the validation of Gowinda by comparing the results to !GoMiner c
 
 
 = Validating Gowinda by comparing the results to !GoMiner =
-As !GoMiner does not correct for the gene length bias nor consider overlapping genes it was necessary to use a dataset not showing these two problems. We therefore (i) filtered for not-overlapping genes (ii) filtered for genes that have an associated GO term and (iii) introduced exactly 5 SNPs in each of these filtered genes. 
+As !GoMiner does not correct for the gene length bias nor consider overlapping genes it was necessary to use a dataset not showing these two biases. We therefore (i) filtered for not-overlapping genes (ii) filtered for genes that have an associated GO term and (iii) introduced exactly 5 SNPs in each of the thus obtained genes. 
 Subsequently we randomly picked 1000 SNPs and compared the p-values obtained with Gowinda to the p-values obtained with !GoMiner (without FDR correction).
 
 == Obtain a set of genes that are not overlapping and have an associated GO term == 
@@ -89,3 +89,6 @@ Our results (including our random SNPs) for the comparision of Gowinda with !GoM
 With an FDR of <0.05 neither !GoMiner nor Gowinda found any significant GO categories. The p-values (not FDR corrected) for the different GO categories obtained by Gowinda and GoMiner are highly correlated (Spearman's rank correlation; rho=0.9999005; p-value < 2.2e-16), see graph below:
 
 [[http://gowinda.googlecode.com/files/cor_gowinda_gominer.png]]
+
+= Does Gowinda correct for the gene length bias =
+In GWAS studies longer genes do typically have more SNPs and thus also have a higher probability of containing a candidate SNP. This potentially higher fraction of candidate SNPs in longer genes may lead to an artefactual overrepresentation of GO categories containing many long genes. To test the effect of this gene length bias and whether Gowinda efficiently corrects for this bias we introduced one SNP every 100bp into genes having an associated GO category. Furthermore overlapping genes were not discarded for this analysis, this dataset thus represents a representative dataset for a typical GWAS study. design. However, finally we randomly picked 1000 SNPs and compared the results obtained  with !GoMiner to the results obtained with Gowinda.  
