--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -17,7 +17,9 @@ This archive contains:
   * the annotation of _D. melanogaster_ (v5.43)
   * the GO associations obtained from !GoMiner for 'CG' gene_ids
 
-The results for the validation of Gowinda by comparing the results to !GoMiner can be found here: http://gowinda.googlecode.com/files/step1_valGoMiner.zip
+The results for the validation of Gowinda using by comparing the results to !GoMiner can be found here: http://gowinda.googlecode.com/files/step1_valGoMiner.zip
+
+The results demonstrating the impact of the gene length bias can be found here: http://gowinda.googlecode.com/files/step2_lengthBias.zip
 
 
 = Validating Gowinda by comparing the results to !GoMiner =
@@ -148,6 +150,6 @@ cat GoMiner/subset_genes.txt.change |awk 'NF>5{print $1,10^$5}'|perl -pe 's/_[^ 
 join -1 1 -2 1 tm_gominer.txt tm_gowinda.txt > merged_min_win.txt
 }}}
 == Results ==
-Our results of this analysis can be found here:
+Our results of this analysis can be found here: http://gowinda.googlecode.com/files/step2_lengthBias.zip
 
 Although we randomly drew SNPs and would thus not expect an overrepresentation of any GO term, !GoMiner reports that 341 GO terms have an significant overrepresentation (FDR <0.05), which suggests that the gene length bias has an tremendous influence on GO term analysis. By contrast Gowinda which corrects for the gene length bias (by random permuting the set of candidate SNPs) correctly reports that none of the GO terms show any significant overrepresentation (FDR <0.05). The correlation between the p-values obtained with Gowinda and !GoMiner (Spearman's rank correlation; rho=0.5610065; p-value < 2.2e-16) is much worse as compared to the unbiased data set (see above). The following graph shows the correlation of the p-values obtained with Gowinda and !GoMiner using the length biased dataset. 
