--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -194,3 +194,8 @@ We than picked one SNP from every gene in the targeted GO categories and added r
 {{{ 
 python ../scripts/pick_random_snps_excepttargetlist.py --snp snps_lengthbiased.txt --genelist random_gocategories.txt > random_targetsnps.txt
 }}}
+
+== Perform GO term analysis with Gowinda ==
+{{{
+/System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Commands/java -Xmx4g -jar /Users/robertkofler/dev/PopGenTools/gowinda/Gowinda.jar --snp-file snps_lengthbiased.txt --candidate-snp-file random_targetsnps.txt --go-association-file association_gominer.txt --annotation-file Flybase.gtf --simulations 1000000 --min-significance 1 --gene-definition exon --threads 8 --output-file gowinda.res --mode gene --min-genes 1
+}}}
